@@ -7,6 +7,7 @@ git-annex (0.03) UNRELEASED; urgency=low
   * Support building with Debian stable's ghc.
   * Fixed memory leak; git-annex no longer reads the whole file list
     from git before starting, and will be much faster with large repos.
+  * Fix crash on unknown symlinks.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 28 Oct 2010 13:46:59 -0400
 
